# manu-spicyAssIstant

./: .gitignore  Cargo.toml  README.md  env_gen_hack.sh  spicepod.yaml
src/: assistant.rs  clients.rs  constants.rs  lib.rs  llm_connect.rs  main.rs  models.rs
tests/: api_test.rs  api_tests.rs  component_tests.rs
