[package]
name = "manu_spicy_assistant"
version = "0.1.0"
edition = "2021"


[dependencies]
dotenv = "0.15"  # Check for the latest version on crates.io
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4.13"
hyper = "0.14.31"
openai-api-rs = "5.0.13"
regex = "1.11.1"

